--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">631438467349320</string>
+    <string name="fb_login_protocol_scheme">fb631438467349320</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
